--- a/index.html
+++ b/index.html
@@ -6,31 +6,29 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <head>
-<link rel="stylesheet" href="/assets/styles.css">
+<link rel="stylesheet" type="text/css" href="/assets/styles.css">
 </head>
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
   
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-      <a href="https://www.linkedin.com/in/bukolat/" target="_blank"><img src="/images/icons8-linkedin.png"</a>
-      <a href="https://github.com/sirbuks" target="_blank"><img src="/images/icons8-github.png"</a> 
+       
   </div>
   
   <div class="w3-display-middle">
     <h1 class="w3-center">Bukola Tejumola <br> </h1>
     <hr class="w3-border-grey" style="margin:auto;width:60%">
-    <p class="w3-large w3-center">Team Oriented Geospatial Analyst <br>Database Design, Development & Administration <br> Scripting: Python & SQL for automating processes, <br>data extraction, data manipulation & ETL workflows
-     </p>
-     <div class="w3-black w3-round">
-     <div class="w3-container w3-round w3-light-grey" style="width:5%">5%</div>
+    <p class="w3-large w3-center">Team Oriented Geospatial Analyst <br>Database Design, Development & Administration <br> Scripting: Python & SQL for automating processes, <br>data extraction, data manipulation & ETL workflows</p>
+    <div class="w3-black w3-round">
+    <div class="w3-container w3-round w3-light-grey" style="width:4%">1%</div>
     </div>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    
+    <a href="https://www.linkedin.com/in/bukolat/" target="_blank"><img src="/images/icons8-linkedin.png"</a>
+    <a href="https://github.com/sirbuks" target="_blank"><img src="/images/icons8-github.png"</a>
   </div>
 </div>
-
 </body>
 </html>
 
