--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <h1 class="w3-center">Bukola Tejumola <br> </h1>
     <hr class="w3-border-grey" style="margin:auto;width:60%">
     <p class="w3-large w3-center">Team Oriented Geospatial Analyst <br>Database Design, Development & Administration <br> Scripting: Python & SQL for automating processes, <br>data extraction, data manipulation & ETL workflows</p>
-    <div class="w3-black w3-round">
-    <div class="w3-container w3-round w3-light-grey" style="width:4%">1%</div>
+    <div class="w3-green w3-round">
+    <div class="w3-container w3-round w3-light-grey" style="width:50px">1%</div>
     </div>
   </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    <a href="https://www.linkedin.com/in/bukolat/" target="_blank"><img src="/images/icons8-linkedin.png"</a>
-    <a href="https://github.com/sirbuks" target="_blank"><img src="/images/icons8-github.png"</a>
+  <div class="container">
+  <div class="icons">
+    <a href="https://www.linkedin.com/in/bukolat" target="_blank"> <img src="/images/icons8-linkedin.png" width="40" height="40"</a>
+    <a href="https://github.com/sirbuks" target="_blank"> <img src="/images/icons8-github.png" width="40" height="40"</a>
+  </div>
   </div>
 </div>
 </body>
