--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
   </div>
   
   <div class="w3-display-middle">
-    <h1 class="w3-center">Bukola Tejumola <br> </h1>
-    <hr class="w3-border-grey" style="margin:auto;width:60%">
-    <p class="w3-large w3-center">Team Oriented Geospatial Analyst <br>Database Design, Development & Administration <br> Scripting: Python & SQL for automating processes, <br>data extraction, data manipulation & ETL workflows</p>
-    <div class="w3-green w3-round">
-    <div class="w3-container w3-round w3-light-grey" style="width:50px">1%</div>
-    </div>
+    <h1 class="w3-center">Bukola T.  <br> </h1>
+    <h6 class="w3-center">Experienced geospatial analyst/engineer with relevant experience developing digital enterprise solutions</p></h6>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <h6 class="w3-center">Python & SQL Scripting . Data Modeling . Data Visualization <br>Spatial Database Design . Database Administration <br>
+    <p></p></h6>
+    <div class = "w3-cell-row" style="width: 100%">
+    <div class="w3-container w3-light-grey w3-cell" style="width: 50px">1% </div>
+    <div class="w3-container w3-green w3-cell"><div class="w3-center"><b>.... site in progress</b></div>
+  </div>  
+  </div>
   </div>
   <div class="container">
   <div class="icons">
