--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p></p></h6>
     <div class = "w3-cell-row" style="width: 100%">
     <div class="w3-container w3-light-grey w3-cell" style="width: 50px">1% </div>
-    <div class="w3-container w3-green w3-cell"><div class="w3-center"><b>.... site in progress</b></div>
+    <div class="w3-container w3-green w3-cell"><div class="w3-center"><b>.... site under construction</b></div>
   </div>  
   </div>
   </div>
